--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.2",
+    "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
     "expo": "~44.0.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-paper": "^4.11.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
@@ -26,6 +35,7 @@
     "@types/react": "^17.0.39",
     "@types/react-native": "^0.67.2",
     "eslint": "7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1"
   },
   "private": true
