--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "meals-to-go",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -11,35 +9,34 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
-    "@expo-google-fonts/lato": "^0.2.2",
-    "@expo-google-fonts/oswald": "^0.2.2",
-    "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/native": "^6.0.8",
-    "@react-navigation/stack": "^6.2.1",
+    "@expo-google-fonts/lato": "^0.1.0",
+    "@expo-google-fonts/oswald": "^0.1.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "camelize": "^1.0.0",
-    "expo": "~44.0.0",
-    "expo-font": "~10.0.4",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^2.3.2",
-    "react-native-paper": "^4.11.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "styled-components": "^5.3.3"
+    "expo": "^45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-status-bar": "~1.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-maps": "0.30.2",
+    "react-native-paper": "^4.5.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@react-native-community/eslint-config": "^3.0.1",
-    "@types/react": "^17.0.39",
-    "@types/react-native": "^0.67.2",
-    "eslint": "7.32.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1"
+    "@react-native-community/eslint-config": "^2.0.0",
+    "prettier": "^2.2.1"
   },
   "private": true
 }
