--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/stack": "^5.12.8",
     "camelize": "^1.0.0",
     "expo": "^45.0.0",
+    "expo-cli": "^5.4.11",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^8.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
