--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.12.8",
     "camelize": "^1.0.0",
     "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
     "expo-cli": "^5.4.11",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
